# study-partner-env

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  quick_test.py  requirements.txt  sanity_check.py
data/: problems.json  resources.json  students.json
server/: app.py
tasks/: task_1.py  task_2.py  task_3.py
