
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-study-partner"
version = "1.0.0"
description = "Adaptive Study Partner RL Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[tool.openenv]
entrypoint = "server.app:app"